--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,12 +48,12 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           build-args: |
-            VERSION=${{ github.event.release.tag_name }}
+            VERSION=${{ github.ref_name }}
           tags: |
-            ${{ env.REPOSITORY_PATH }}:v${{ github.event.release.tag_name }}
+            ${{ env.REPOSITORY_PATH }}:v${{ github.ref_name }}
             ${{ env.REPOSITORY_PATH }}:${{ env.REPOSITORY_SHA }}
             ${{ env.REPOSITORY_PATH }}:latest
-            ghcr.io/${{ env.REPOSITORY_PATH }}:v${{ github.event.release.tag_name }}
+            ghcr.io/${{ env.REPOSITORY_PATH }}:v${{ github.ref_name }}
             ghcr.io/${{ env.REPOSITORY_PATH }}:${{ env.REPOSITORY_SHA }}
             ghcr.io/${{ env.REPOSITORY_PATH }}:latest
       -
